# rustsonrpc

./: Cargo.toml  README.md
deploy/: prod
rustsonrpc-macros/: Cargo.toml
rustsonrpc-macros/src/: lib.rs
src/: errors.rs  lib.rs  listener.rs  params.rs  peer.rs  peer_builder.rs  request.rs  response.rs  server.rs  server_builder.rs  service.rs  transport.rs
src/transport/: mod.rs  stdio.rs  tcp.rs  websocket.rs
