[package]
name = "rustsonrpc"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "rustsonrpc-macros",
]

[dependencies]
async-trait = "0.1"
futures-util = "0.3"
rustsonrpc-macros = { path = "rustsonrpc-macros" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
