[package]
name = "rustsonrpc"
version = "0.1.2"
edition = "2021"
description = "Async peer-first JSON-RPC for Rust with Tokio transports and service macros."
license = "MIT"
repository = "https://github.com/GodOfAvacyn/rustsonrpc"
readme = "README.md"
keywords = ["json-rpc", "jsonrpc", "rpc", "tokio", "websocket"]
categories = ["asynchronous", "network-programming", "web-programming"]

[workspace]
members = [
    "rustsonrpc-macros",
]
resolver = "2"

[dependencies]
async-trait = "0.1"
futures-util = "0.3"
rustsonrpc-macros = { version = "0.1.2", path = "rustsonrpc-macros" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
