[package]
name = "rustsonrpc-macros"
version = "0.1.1"
edition = "2021"
description = "Proc macros for rustsonrpc services and named JSON-RPC params."
license = "MIT"
repository = "https://github.com/GodOfAvacyn/rustsonrpc"
keywords = ["json-rpc", "jsonrpc", "rpc", "proc-macro"]
categories = ["asynchronous", "network-programming", "web-programming"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
